--- a/TECH/appsettings.json
+++ b/TECH/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "AppDbContext": "Data Source=DESKTOP-ED9TBM8\\SQLEXPRESS;Initial Catalog=SEP25Team02;Integrated Security=True",
+    "AppDbContext1": "Data Source=CHANG-GAMING213\\SQLEXPRESS;Initial Catalog=SEP25Team02;Integrated Security=True"
+  },
   "AllowedHosts": "*"
 }
