--- a/TECH/appsettings.json
+++ b/TECH/appsettings.json
@@ -6,8 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "AppDbContext": "Data Source=DESKTOP-ED9TBM8\\SQLEXPRESS;Initial Catalog=SEP25Team02;Integrated Security=True",
-    "AppDbContext1": "Data Source=CHANG-GAMING213\\SQLEXPRESS;Initial Catalog=SEP25Team02;Integrated Security=True"
+    "AppDbContext": "Data Source=DESKTOP-DDVHBI0;Initial Catalog=DBDienThoai;Integrated Security=True" // ở nhà sử dụng
+    //"AppDbContext": "Data Source=10.164.178.37;Initial Catalog=DBDienThoai;User ID=sa;Password=123456a@" // ở cty
   },
   "AllowedHosts": "*"
 }
